libs/core/src/test/resources/kts/expected/templates/statefulset.yaml
---
apiVersion: "apps/v1"
kind: "StatefulSet"
metadata:
  name: "metadata"
  generateName: "generateName"
  namespace: "namespace"
spec:
  replicas: 3
  serviceName: "my-service"
  podManagementPolicy: "Parallel"
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: "demo"
  updateStrategy:
    type: "RollingUpdate"
    rollingUpdate:
      partition: 1
      maxUnavailable: 1
  volumeClaimTemplates:
    - metadata:
        name: "data"
      spec:
        accessModes:
          - "ReadWriteOnce"
        storageClassName: "standard"
        volumeMode: "Filesystem"
        resources:
          requests:
            storage: "1Gi"
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: "Delete"
    whenScaled: "Retain"
  template:
    metadata:
      labels:
        app: "demo"
    spec:
      containers:
        - name: "name"
          image: "image"
